// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`e2e > article.md 1`] = `
[
  {
    "children": [
      {
        "text": "title: "This is frontmatter"
date: 2020-04-30 12:34
categories: [JavaScript, React]",
      },
    ],
    "type": "yaml",
  },
  {
    "children": [
      {
        "text": "heading 1",
      },
    ],
    "depth": 1,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "heading 2",
      },
    ],
    "depth": 2,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "heading 3",
      },
    ],
    "depth": 3,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "heading 4",
      },
    ],
    "depth": 4,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "heading 5",
      },
    ],
    "depth": 5,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "heading 6",
      },
    ],
    "depth": 6,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "aaaaaaaa",
      },
      {
        "strong": true,
        "text": "bold",
      },
      {
        "emphasis": true,
        "text": "emphasis",
      },
      {
        "delete": true,
        "text": "delete",
      },
      {
        "inlineCode": true,
        "text": "inline code",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "text": "list",
              },
            ],
            "type": "paragraph",
          },
          {
            "children": [
              {
                "checked": null,
                "children": [
                  {
                    "children": [
                      {
                        "text": "list",
                      },
                    ],
                    "type": "paragraph",
                  },
                  {
                    "children": [
                      {
                        "checked": null,
                        "children": [
                          {
                            "children": [
                              {
                                "text": "list",
                              },
                            ],
                            "type": "paragraph",
                          },
                        ],
                        "spread": false,
                        "type": "listItem",
                      },
                    ],
                    "ordered": false,
                    "spread": false,
                    "start": null,
                    "type": "list",
                  },
                ],
                "spread": false,
                "type": "listItem",
              },
              {
                "checked": null,
                "children": [
                  {
                    "children": [
                      {
                        "text": "list",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "spread": false,
                "type": "listItem",
              },
              {
                "checked": null,
                "children": [
                  {
                    "children": [
                      {
                        "text": "list",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "spread": false,
                "type": "listItem",
              },
            ],
            "ordered": false,
            "spread": false,
            "start": null,
            "type": "list",
          },
        ],
        "spread": true,
        "type": "listItem",
      },
      {
        "checked": false,
        "children": [
          {
            "children": [
              {
                "text": "not checked",
              },
            ],
            "type": "paragraph",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
      {
        "checked": true,
        "children": [
          {
            "children": [
              {
                "text": "checked",
              },
            ],
            "type": "paragraph",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
    ],
    "ordered": false,
    "spread": true,
    "start": null,
    "type": "list",
  },
  {
    "children": [
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "text": "ordered list",
              },
            ],
            "type": "paragraph",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "text": "ordered list",
              },
            ],
            "type": "paragraph",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "text": "ordered list",
              },
            ],
            "type": "paragraph",
          },
          {
            "children": [
              {
                "checked": null,
                "children": [
                  {
                    "children": [
                      {
                        "text": "aaa",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "spread": false,
                "type": "listItem",
              },
              {
                "checked": null,
                "children": [
                  {
                    "children": [
                      {
                        "text": "aaa",
                      },
                    ],
                    "type": "paragraph",
                  },
                  {
                    "children": [
                      {
                        "checked": null,
                        "children": [
                          {
                            "children": [
                              {
                                "text": "eeeee",
                              },
                            ],
                            "type": "paragraph",
                          },
                        ],
                        "spread": false,
                        "type": "listItem",
                      },
                      {
                        "checked": null,
                        "children": [
                          {
                            "children": [
                              {
                                "text": "eeeee",
                              },
                            ],
                            "type": "paragraph",
                          },
                        ],
                        "spread": false,
                        "type": "listItem",
                      },
                    ],
                    "ordered": true,
                    "spread": false,
                    "start": 1,
                    "type": "list",
                  },
                ],
                "spread": false,
                "type": "listItem",
              },
              {
                "checked": null,
                "children": [
                  {
                    "children": [
                      {
                        "text": "aaa",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "spread": false,
                "type": "listItem",
              },
            ],
            "ordered": true,
            "spread": false,
            "start": 1,
            "type": "list",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "text": "ordered list",
              },
            ],
            "type": "paragraph",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
    ],
    "ordered": true,
    "spread": false,
    "start": 1,
    "type": "list",
  },
  {
    "children": [
      {
        "text": "This is ",
      },
      {
        "children": [
          {
            "text": "link to GitHub.com",
          },
        ],
        "title": null,
        "type": "link",
        "url": "https://github.com/",
      },
      {
        "text": ".",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "This is ",
      },
      {
        "alt": "image",
        "children": [
          {
            "text": "",
          },
        ],
        "title": null,
        "type": "image",
        "url": "https://github.githubassets.com/images/modules/logos_page/Octocat.png",
      },
      {
        "text": ".",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "text": "quote
quote
quote
quote",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "blockquote",
  },
  {
    "children": [
      {
        "children": [
          {
            "text": "quote",
          },
        ],
        "type": "paragraph",
      },
      {
        "children": [
          {
            "children": [
              {
                "text": "quoted quote",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "blockquote",
      },
    ],
    "type": "blockquote",
  },
  {
    "align": [
      "left",
      "right",
      "center",
    ],
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "text": "Left align",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "Right align",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "Center align",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
      {
        "children": [
          {
            "children": [
              {
                "text": "This",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "This",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "This",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
      {
        "children": [
          {
            "children": [
              {
                "text": "column",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "column",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "column",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
      {
        "children": [
          {
            "children": [
              {
                "text": "will",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "will",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "will",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
      {
        "children": [
          {
            "children": [
              {
                "text": "be",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "be",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "be",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
      {
        "children": [
          {
            "children": [
              {
                "text": "left",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "right",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "center",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
      {
        "children": [
          {
            "children": [
              {
                "text": "aligned",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "aligned",
              },
            ],
            "type": "tableCell",
          },
          {
            "children": [
              {
                "text": "aligned",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
    ],
    "type": "table",
  },
  {
    "children": [
      {
        "text": "<div style="color:red;">
This is <u>HTML</u>
</div>",
      },
    ],
    "type": "html",
  },
  {
    "children": [
      {
        "text": "",
      },
    ],
    "type": "thematicBreak",
  },
  {
    "children": [
      {
        "text": "",
      },
    ],
    "type": "thematicBreak",
  },
  {
    "children": [
      {
        "text": "function $initHighlight(block, cls) {
  try {
    if (cls.search(/\\bno\\-highlight\\b/) != -1)
      return process(block, true, 0x0F) +
             \` class="\${cls}"\`;
  } catch (e) {
    /* handle exception */
  }
  for (var i = 0 / 2; i < classes.length; i++) {
    if (checkCondition(classes[i]) === undefined)
      console.log('undefined');
  }

  return (
    <div>
      <web-component>{block}</web-component>
    </div>
  )
}

export  $initHighlight;",
      },
    ],
    "lang": "javascript",
    "meta": null,
    "type": "code",
  },
]
`;

exports[`e2e > article.md 2`] = `
{
  "children": [
    {
      "type": "yaml",
      "value": "title: "This is frontmatter"
date: 2020-04-30 12:34
categories: [JavaScript, React]",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading 1",
        },
      ],
      "depth": 1,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading 2",
        },
      ],
      "depth": 2,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading 3",
        },
      ],
      "depth": 3,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading 4",
        },
      ],
      "depth": 4,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading 5",
        },
      ],
      "depth": 5,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "heading 6",
        },
      ],
      "depth": 6,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "aaaaaaaa",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "bold",
            },
          ],
          "type": "strong",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "emphasis",
            },
          ],
          "type": "emphasis",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "delete",
            },
          ],
          "type": "delete",
        },
        {
          "type": "inlineCode",
          "value": "inline code",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "list",
                },
              ],
              "type": "paragraph",
            },
            {
              "children": [
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "type": "text",
                          "value": "list",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "checked": null,
                          "children": [
                            {
                              "children": [
                                {
                                  "type": "text",
                                  "value": "list",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "spread": false,
                          "type": "listItem",
                        },
                      ],
                      "ordered": false,
                      "spread": false,
                      "start": null,
                      "type": "list",
                    },
                  ],
                  "spread": false,
                  "type": "listItem",
                },
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "type": "text",
                          "value": "list",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "spread": false,
                  "type": "listItem",
                },
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "type": "text",
                          "value": "list",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "spread": false,
                  "type": "listItem",
                },
              ],
              "ordered": false,
              "spread": false,
              "start": null,
              "type": "list",
            },
          ],
          "spread": true,
          "type": "listItem",
        },
        {
          "checked": false,
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "not checked",
                },
              ],
              "type": "paragraph",
            },
          ],
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": true,
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "checked",
                },
              ],
              "type": "paragraph",
            },
          ],
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "spread": true,
      "start": null,
      "type": "list",
    },
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "ordered list",
                },
              ],
              "type": "paragraph",
            },
          ],
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "ordered list",
                },
              ],
              "type": "paragraph",
            },
          ],
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "ordered list",
                },
              ],
              "type": "paragraph",
            },
            {
              "children": [
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "type": "text",
                          "value": "aaa",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "spread": false,
                  "type": "listItem",
                },
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "type": "text",
                          "value": "aaa",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "checked": null,
                          "children": [
                            {
                              "children": [
                                {
                                  "type": "text",
                                  "value": "eeeee",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "spread": false,
                          "type": "listItem",
                        },
                        {
                          "checked": null,
                          "children": [
                            {
                              "children": [
                                {
                                  "type": "text",
                                  "value": "eeeee",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "spread": false,
                          "type": "listItem",
                        },
                      ],
                      "ordered": true,
                      "spread": false,
                      "start": 1,
                      "type": "list",
                    },
                  ],
                  "spread": false,
                  "type": "listItem",
                },
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "type": "text",
                          "value": "aaa",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "spread": false,
                  "type": "listItem",
                },
              ],
              "ordered": true,
              "spread": false,
              "start": 1,
              "type": "list",
            },
          ],
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "ordered list",
                },
              ],
              "type": "paragraph",
            },
          ],
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": true,
      "spread": false,
      "start": 1,
      "type": "list",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "This is ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "link to GitHub.com",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://github.com/",
        },
        {
          "type": "text",
          "value": ".",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "This is ",
        },
        {
          "alt": "image",
          "title": null,
          "type": "image",
          "url": "https://github.githubassets.com/images/modules/logos_page/Octocat.png",
        },
        {
          "type": "text",
          "value": ".",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "quote
quote
quote
quote",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "quote",
            },
          ],
          "type": "paragraph",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "quoted quote",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "blockquote",
        },
      ],
      "type": "blockquote",
    },
    {
      "align": [
        "left",
        "right",
        "center",
      ],
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "Left align",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "Right align",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "Center align",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "This",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "This",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "This",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "column",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "column",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "column",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "will",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "will",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "will",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "be",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "be",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "be",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "left",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "right",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "center",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "aligned",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "aligned",
                },
              ],
              "type": "tableCell",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "aligned",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    {
      "type": "html",
      "value": "<div style="color:red;">
This is <u>HTML</u>
</div>",
    },
    {
      "type": "thematicBreak",
    },
    {
      "type": "thematicBreak",
    },
    {
      "lang": "javascript",
      "meta": null,
      "type": "code",
      "value": "function $initHighlight(block, cls) {
  try {
    if (cls.search(/\\bno\\-highlight\\b/) != -1)
      return process(block, true, 0x0F) +
             \` class="\${cls}"\`;
  } catch (e) {
    /* handle exception */
  }
  for (var i = 0 / 2; i < classes.length; i++) {
    if (checkCondition(classes[i]) === undefined)
      console.log('undefined');
  }

  return (
    <div>
      <web-component>{block}</web-component>
    </div>
  )
}

export  $initHighlight;",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > article.md 3`] = `
"---
title: "This is frontmatter"
date: 2020-04-30 12:34
categories: [JavaScript, React]
---

# heading 1

## heading 2

### heading 3

#### heading 4

##### heading 5

###### heading 6

aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

aaaaaaaa**bold**_emphasis_~~delete~~\`inline code\`

- list

  - list
    - list
  - list
  - list

- [ ] not checked

- [x] checked

1. ordered list
2. ordered list
3. ordered list
   1. aaa
   2. aaa
      1. eeeee
      2. eeeee
   3. aaa
4. ordered list

This is [link to GitHub.com](https://github.com/).

This is ![image](https://github.githubassets.com/images/modules/logos_page/Octocat.png).

> quote
> quote
> quote
> quote

> quote
>
> > quoted quote

| Left align | Right align | Center align |
| :--------- | ----------: | :----------: |
| This       |        This |     This     |
| column     |      column |    column    |
| will       |        will |     will     |
| be         |          be |      be      |
| left       |       right |    center    |
| aligned    |     aligned |    aligned   |

<div style="color:red;">
This is <u>HTML</u>
</div>

***

***

\`\`\`javascript
function $initHighlight(block, cls) {
  try {
    if (cls.search(/\\bno\\-highlight\\b/) != -1)
      return process(block, true, 0x0F) +
             \` class="\${cls}"\`;
  } catch (e) {
    /* handle exception */
  }
  for (var i = 0 / 2; i < classes.length; i++) {
    if (checkCondition(classes[i]) === undefined)
      console.log('undefined');
  }

  return (
    <div>
      <web-component>{block}</web-component>
    </div>
  )
}

export  $initHighlight;
\`\`\`
"
`;

exports[`e2e > node-break.md 1`] = `
[
  {
    "children": [
      {
        "text": "",
      },
    ],
    "type": "thematicBreak",
  },
  {
    "children": [
      {
        "text": "",
      },
    ],
    "type": "thematicBreak",
  },
]
`;

exports[`e2e > node-break.md 2`] = `
{
  "children": [
    {
      "type": "thematicBreak",
    },
    {
      "type": "thematicBreak",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-break.md 3`] = `
"***

***
"
`;

exports[`e2e > node-code.md 1`] = `
[
  {
    "children": [
      {
        "text": "@font-face {
  font-family: Chunkfive;
  src: url("Chunkfive.otf");
}

body,
.usertext {
  color: #f0f0f0;
  background: #600;
  font-family: Chunkfive, sans;
  --heading-1: 30px/32px Helvetica, sans-serif;
}

@import url(print.css);
@media print {
  a[href^="http"]::after {
    content: attr(href);
  }
}",
      },
    ],
    "lang": "css",
    "meta": "metadata="12345"",
    "type": "code",
  },
  {
    "children": [
      {
        "text": "function $initHighlight(block, cls) {
  try {
    if (cls.search(/\\bno\\-highlight\\b/) != -1)
      return process(block, true, 0x0F) +
             \` class="\${cls}"\`;
  } catch (e) {
    /* handle exception */
  }
  for (var i = 0 / 2; i < classes.length; i++) {
    if (checkCondition(classes[i]) === undefined)
      console.log('undefined');
  }

  return (
    <div>
      <web-component>{block}</web-component>
    </div>
  )
}

export  $initHighlight;",
      },
    ],
    "lang": "javascript",
    "meta": null,
    "type": "code",
  },
  {
    "children": [
      {
        "text": "class MyClass {
  public static myValue: string;
  constructor(init: string) {
    this.myValue = init;
  }
}
import fs = require("fs");
module MyModule {
  export interface MyInterface extends Other {
    myProperty: any;
  }
}
declare magicNumber number;
myArray.forEach(() => { }); // fat arrow syntax",
      },
    ],
    "lang": "typescript",
    "meta": null,
    "type": "code",
  },
]
`;

exports[`e2e > node-code.md 2`] = `
{
  "children": [
    {
      "lang": "css",
      "meta": "metadata="12345"",
      "type": "code",
      "value": "@font-face {
  font-family: Chunkfive;
  src: url("Chunkfive.otf");
}

body,
.usertext {
  color: #f0f0f0;
  background: #600;
  font-family: Chunkfive, sans;
  --heading-1: 30px/32px Helvetica, sans-serif;
}

@import url(print.css);
@media print {
  a[href^="http"]::after {
    content: attr(href);
  }
}",
    },
    {
      "lang": "javascript",
      "meta": null,
      "type": "code",
      "value": "function $initHighlight(block, cls) {
  try {
    if (cls.search(/\\bno\\-highlight\\b/) != -1)
      return process(block, true, 0x0F) +
             \` class="\${cls}"\`;
  } catch (e) {
    /* handle exception */
  }
  for (var i = 0 / 2; i < classes.length; i++) {
    if (checkCondition(classes[i]) === undefined)
      console.log('undefined');
  }

  return (
    <div>
      <web-component>{block}</web-component>
    </div>
  )
}

export  $initHighlight;",
    },
    {
      "lang": "typescript",
      "meta": null,
      "type": "code",
      "value": "class MyClass {
  public static myValue: string;
  constructor(init: string) {
    this.myValue = init;
  }
}
import fs = require("fs");
module MyModule {
  export interface MyInterface extends Other {
    myProperty: any;
  }
}
declare magicNumber number;
myArray.forEach(() => { }); // fat arrow syntax",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-code.md 3`] = `
"\`\`\`css metadata="12345"
@font-face {
  font-family: Chunkfive;
  src: url("Chunkfive.otf");
}

body,
.usertext {
  color: #f0f0f0;
  background: #600;
  font-family: Chunkfive, sans;
  --heading-1: 30px/32px Helvetica, sans-serif;
}

@import url(print.css);
@media print {
  a[href^="http"]::after {
    content: attr(href);
  }
}
\`\`\`

\`\`\`javascript
function $initHighlight(block, cls) {
  try {
    if (cls.search(/\\bno\\-highlight\\b/) != -1)
      return process(block, true, 0x0F) +
             \` class="\${cls}"\`;
  } catch (e) {
    /* handle exception */
  }
  for (var i = 0 / 2; i < classes.length; i++) {
    if (checkCondition(classes[i]) === undefined)
      console.log('undefined');
  }

  return (
    <div>
      <web-component>{block}</web-component>
    </div>
  )
}

export  $initHighlight;
\`\`\`

\`\`\`typescript
class MyClass {
  public static myValue: string;
  constructor(init: string) {
    this.myValue = init;
  }
}
import fs = require("fs");
module MyModule {
  export interface MyInterface extends Other {
    myProperty: any;
  }
}
declare magicNumber number;
myArray.forEach(() => { }); // fat arrow syntax
\`\`\`
"
`;

exports[`e2e > node-footnotes.md 1`] = `
[
  {
    "children": [
      {
        "text": "This is footnote",
      },
      {
        "children": [
          {
            "text": "",
          },
        ],
        "identifier": "1",
        "label": "1",
        "type": "footnoteReference",
      },
      {
        "text": ".",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "text": "Here is the footnote.",
          },
        ],
        "type": "paragraph",
      },
    ],
    "identifier": "1",
    "label": "1",
    "type": "footnoteDefinition",
  },
]
`;

exports[`e2e > node-footnotes.md 2`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "This is footnote",
        },
        {
          "identifier": "1",
          "label": "1",
          "type": "footnoteReference",
        },
        {
          "type": "text",
          "value": ".",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "Here is the footnote.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "identifier": "1",
      "label": "1",
      "type": "footnoteDefinition",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-footnotes.md 3`] = `
"This is footnote[^1].

[^1]: Here is the footnote.
"
`;

exports[`e2e > node-frontmatter-toml.md 1`] = `
[
  {
    "children": [
      {
        "text": "title = "This is toml"
date = "2020-04-30 22:34"",
      },
    ],
    "type": "toml",
  },
  {
    "children": [
      {
        "text": "Other markdown",
      },
    ],
    "depth": 1,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "blablabla",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`e2e > node-frontmatter-toml.md 2`] = `
{
  "children": [
    {
      "type": "toml",
      "value": "title = "This is toml"
date = "2020-04-30 22:34"",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Other markdown",
        },
      ],
      "depth": 1,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "blablabla",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-frontmatter-toml.md 3`] = `
"+++
title = "This is toml"
date = "2020-04-30 22:34"
+++

# Other markdown

blablabla
"
`;

exports[`e2e > node-frontmatter-yaml.md 1`] = `
[
  {
    "children": [
      {
        "text": "title: "This is yaml"
date: 2020-04-30 22:34
categories: [JavaScript, React]",
      },
    ],
    "type": "yaml",
  },
  {
    "children": [
      {
        "text": "Other markdown",
      },
    ],
    "depth": 1,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "blablabla",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`e2e > node-frontmatter-yaml.md 2`] = `
{
  "children": [
    {
      "type": "yaml",
      "value": "title: "This is yaml"
date: 2020-04-30 22:34
categories: [JavaScript, React]",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Other markdown",
        },
      ],
      "depth": 1,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "blablabla",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-frontmatter-yaml.md 3`] = `
"---
title: "This is yaml"
date: 2020-04-30 22:34
categories: [JavaScript, React]
---

# Other markdown

blablabla
"
`;

exports[`e2e > node-heading.md 1`] = `
[
  {
    "children": [
      {
        "text": "Alpha",
      },
    ],
    "depth": 1,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "aaaa",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "Bravo",
      },
    ],
    "depth": 2,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "bbbb",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "Charlie",
      },
    ],
    "depth": 3,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "cccc",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "Delta",
      },
    ],
    "depth": 2,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "dddd",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "E",
      },
    ],
    "depth": 3,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "F",
      },
    ],
    "depth": 4,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "G",
      },
    ],
    "depth": 5,
    "type": "heading",
  },
  {
    "children": [
      {
        "text": "H",
      },
    ],
    "depth": 6,
    "type": "heading",
  },
]
`;

exports[`e2e > node-heading.md 2`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Alpha",
        },
      ],
      "depth": 1,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "aaaa",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Bravo",
        },
      ],
      "depth": 2,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "bbbb",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Charlie",
        },
      ],
      "depth": 3,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "cccc",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Delta",
        },
      ],
      "depth": 2,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "dddd",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "E",
        },
      ],
      "depth": 3,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "F",
        },
      ],
      "depth": 4,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "G",
        },
      ],
      "depth": 5,
      "type": "heading",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "H",
        },
      ],
      "depth": 6,
      "type": "heading",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-heading.md 3`] = `
"# Alpha

aaaa

## Bravo

bbbb

### Charlie

cccc

## Delta

dddd

### E

#### F

##### G

###### H
"
`;

exports[`e2e > node-math.md 1`] = `
[
  {
    "children": [
      {
        "text": "Lift(",
      },
      {
        "children": [
          {
            "text": "L",
          },
        ],
        "type": "inlineMath",
      },
      {
        "text": ") can be determined by Lift Coefficient (",
      },
      {
        "children": [
          {
            "text": "C_L",
          },
        ],
        "type": "inlineMath",
      },
      {
        "text": ") like the following
equation.",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "L = \\frac{1}{2} \\rho v^2 S C_L",
      },
    ],
    "type": "math",
  },
]
`;

exports[`e2e > node-math.md 2`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Lift(",
        },
        {
          "type": "inlineMath",
          "value": "L",
        },
        {
          "type": "text",
          "value": ") can be determined by Lift Coefficient (",
        },
        {
          "type": "inlineMath",
          "value": "C_L",
        },
        {
          "type": "text",
          "value": ") like the following
equation.",
        },
      ],
      "type": "paragraph",
    },
    {
      "type": "math",
      "value": "L = \\frac{1}{2} \\rho v^2 S C_L",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-math.md 3`] = `
"Lift($L$) can be determined by Lift Coefficient ($C_L$) like the following
equation.

$$
L = \\frac{1}{2} \\rho v^2 S C_L
$$
"
`;

exports[`e2e > node-ml.md 1`] = `
[
  {
    "children": [
      {
        "text": "<div>
<span>This is <b>html</b></span>
</div>",
      },
    ],
    "type": "html",
  },
  {
    "children": [
      {
        "text": "<!--comment-->",
      },
    ],
    "type": "html",
  },
  {
    "children": [
      {
        "children": [
          {
            "text": "mailto:foobarbaz",
          },
        ],
        "title": null,
        "type": "link",
        "url": "mailto:foobarbaz",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "aaaaaa",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`e2e > node-ml.md 2`] = `
{
  "children": [
    {
      "type": "html",
      "value": "<div>
<span>This is <b>html</b></span>
</div>",
    },
    {
      "type": "html",
      "value": "<!--comment-->",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "mailto:foobarbaz",
            },
          ],
          "title": null,
          "type": "link",
          "url": "mailto:foobarbaz",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "aaaaaa",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-ml.md 3`] = `
"<div>
<span>This is <b>html</b></span>
</div>

<!--comment-->

<mailto:foobarbaz>

aaaaaa
"
`;

exports[`e2e > node-paragraph.md 1`] = `
[
  {
    "children": [
      {
        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`e2e > node-paragraph.md 2`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-paragraph.md 3`] = `
"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
"
`;

exports[`e2e > node-phrasing-1.md 1`] = `
[
  {
    "children": [
      {
        "text": "aaa ",
      },
      {
        "strong": true,
        "text": "aaaaaaa",
      },
      {
        "text": " aaaaaa ",
      },
      {
        "emphasis": true,
        "text": "aaaaaaaa",
      },
      {
        "text": " aaaaaaaa ",
      },
      {
        "delete": true,
        "text": "aaaaaaa",
      },
      {
        "text": " aaaa ",
      },
      {
        "inlineCode": true,
        "text": "aaaaaaaa",
      },
      {
        "text": " aaa
aaa",
      },
      {
        "emphasis": true,
        "strong": true,
        "text": "aa",
      },
      {
        "delete": true,
        "strong": true,
        "text": "aa",
      },
      {
        "text": "aaa ",
      },
      {
        "emphasis": true,
        "text": "aa ",
      },
      {
        "emphasis": true,
        "strong": true,
        "text": "a ",
      },
      {
        "delete": true,
        "emphasis": true,
        "strong": true,
        "text": "aa",
      },
      {
        "emphasis": true,
        "strong": true,
        "text": " aa ",
      },
      {
        "emphasis": true,
        "inlineCode": true,
        "strong": true,
        "text": "aaa",
      },
      {
        "emphasis": true,
        "strong": true,
        "text": " aaaaa",
      },
      {
        "emphasis": true,
        "text": " aaaa",
      },
      {
        "text": " aa",
      },
      {
        "inlineCode": true,
        "text": "a*aa*aa_aa_a~~aa~~a",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "strong": true,
        "text": "heading",
      },
    ],
    "depth": 1,
    "type": "heading",
  },
  {
    "children": [
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "strong": true,
                "text": "list",
              },
            ],
            "type": "paragraph",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
    ],
    "ordered": false,
    "spread": false,
    "start": null,
    "type": "list",
  },
  {
    "children": [
      {
        "children": [
          {
            "strong": true,
            "text": "quote",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "blockquote",
  },
  {
    "children": [
      {
        "children": [
          {
            "strong": true,
            "text": "link to GitHub.com",
          },
        ],
        "title": null,
        "type": "link",
        "url": "https://github.com/",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "strong": true,
            "text": "link to GitHub.com",
          },
        ],
        "title": null,
        "type": "link",
        "url": "https://github.com/",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "alt": "image",
        "children": [
          {
            "text": "",
          },
        ],
        "title": null,
        "type": "image",
        "url": "https://github.githubassets.com/images/modules/logos_page/Octocat.png",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`e2e > node-phrasing-1.md 2`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "aaa ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "aaaaaaa",
            },
          ],
          "type": "strong",
        },
        {
          "type": "text",
          "value": " aaaaaa ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "aaaaaaaa",
            },
          ],
          "type": "emphasis",
        },
        {
          "type": "text",
          "value": " aaaaaaaa ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "aaaaaaa",
            },
          ],
          "type": "delete",
        },
        {
          "type": "text",
          "value": " aaaa ",
        },
        {
          "type": "inlineCode",
          "value": "aaaaaaaa",
        },
        {
          "type": "text",
          "value": " aaa
aaa",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "aa",
                },
              ],
              "type": "strong",
            },
          ],
          "type": "emphasis",
        },
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "aa",
                },
              ],
              "type": "delete",
            },
          ],
          "type": "strong",
        },
        {
          "type": "text",
          "value": "aaa ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "aa ",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "a ",
                },
                {
                  "children": [
                    {
                      "type": "text",
                      "value": "aa",
                    },
                  ],
                  "type": "delete",
                },
                {
                  "type": "text",
                  "value": " aa ",
                },
                {
                  "type": "inlineCode",
                  "value": "aaa",
                },
                {
                  "type": "text",
                  "value": " aaaaa",
                },
              ],
              "type": "strong",
            },
            {
              "type": "text",
              "value": " aaaa",
            },
          ],
          "type": "emphasis",
        },
        {
          "type": "text",
          "value": " aa",
        },
        {
          "type": "inlineCode",
          "value": "a*aa*aa_aa_a~~aa~~a",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "heading",
            },
          ],
          "type": "strong",
        },
      ],
      "depth": 1,
      "type": "heading",
    },
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "type": "text",
                      "value": "list",
                    },
                  ],
                  "type": "strong",
                },
              ],
              "type": "paragraph",
            },
          ],
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "spread": false,
      "start": null,
      "type": "list",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "quote",
                },
              ],
              "type": "strong",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "link to GitHub.com",
                },
              ],
              "type": "strong",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://github.com/",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "link to GitHub.com",
                },
              ],
              "type": "strong",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://github.com/",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "alt": "image",
          "title": null,
          "type": "image",
          "url": "https://github.githubassets.com/images/modules/logos_page/Octocat.png",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-phrasing-1.md 3`] = `
"aaa **aaaaaaa** aaaaaa _aaaaaaaa_ aaaaaaaa ~~aaaaaaa~~ aaaa \`aaaaaaaa\` aaa
aa&#x61;_**aa**_**~~aa~~**&#x61;aa _aa **a ~~aa~~ aa \`aaa\` aaaaa** aaaa_ aa\`a*aa*aa_aa_a~~aa~~a\`

# **heading**

- **list**

> **quote**

[**link to GitHub.com**](https://github.com/)

[**link to GitHub.com**](https://github.com/)

![image](https://github.githubassets.com/images/modules/logos_page/Octocat.png)
"
`;

exports[`e2e > node-phrasing-2.md 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "strong": true,
            "text": "link to GitHub.com",
          },
        ],
        "title": "link-title",
        "type": "link",
        "url": "https://github.com/",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "alt": "image",
        "children": [
          {
            "text": "",
          },
        ],
        "title": "image-title",
        "type": "image",
        "url": "https://github.githubassets.com/images/modules/logos_page/Octocat.png",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "children": [
          {
            "text": "alpha",
          },
        ],
        "identifier": "link-ref",
        "label": "link-ref",
        "referenceType": "full",
        "type": "linkReference",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "alt": "blavo",
        "children": [
          {
            "text": "",
          },
        ],
        "identifier": "image-ref",
        "label": "image-ref",
        "referenceType": "full",
        "type": "imageReference",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "",
      },
    ],
    "identifier": "link-ref",
    "label": "link-ref",
    "title": null,
    "type": "definition",
    "url": "example.com",
  },
  {
    "children": [
      {
        "text": "",
      },
    ],
    "identifier": "image-ref",
    "label": "image-ref",
    "title": null,
    "type": "definition",
    "url": "example.gif",
  },
]
`;

exports[`e2e > node-phrasing-2.md 2`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "link to GitHub.com",
                },
              ],
              "type": "strong",
            },
          ],
          "title": "link-title",
          "type": "link",
          "url": "https://github.com/",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "alt": "image",
          "title": "image-title",
          "type": "image",
          "url": "https://github.githubassets.com/images/modules/logos_page/Octocat.png",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "alpha",
            },
          ],
          "identifier": "link-ref",
          "label": "link-ref",
          "referenceType": "full",
          "type": "linkReference",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "alt": "blavo",
          "identifier": "image-ref",
          "label": "image-ref",
          "referenceType": "full",
          "type": "imageReference",
        },
      ],
      "type": "paragraph",
    },
    {
      "identifier": "link-ref",
      "label": "link-ref",
      "title": null,
      "type": "definition",
      "url": "example.com",
    },
    {
      "identifier": "image-ref",
      "label": "image-ref",
      "title": null,
      "type": "definition",
      "url": "example.gif",
    },
  ],
  "type": "root",
}
`;

exports[`e2e > node-phrasing-2.md 3`] = `
"[**link to GitHub.com**](https://github.com/ "link-title")

![image](https://github.githubassets.com/images/modules/logos_page/Octocat.png "image-title")

[alpha][link-ref]

![blavo][image-ref]

[link-ref]: example.com

[image-ref]: example.gif
"
`;

exports[`issues > issue42 1`] = `
[
  {
    "children": [
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "text": "list",
              },
            ],
            "type": "paragraph",
          },
          {
            "children": [
              {
                "checked": null,
                "children": [
                  {
                    "children": [
                      {
                        "text": "list",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "spread": false,
                "type": "listItem",
              },
            ],
            "ordered": false,
            "spread": false,
            "start": null,
            "type": "list",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "text": "list",
              },
            ],
            "type": "paragraph",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "text": "list",
              },
            ],
            "type": "paragraph",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
      {
        "checked": null,
        "children": [
          {
            "text": "",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
    ],
    "ordered": false,
    "spread": false,
    "start": null,
    "type": "list",
  },
]
`;

exports[`issues > issue42 2`] = `
"- list
  - list
- list
- list
-
"
`;

exports[`issues > issue44 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Naoki Urasawa is a ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "Japanese",
            },
          ],
          "type": "strong",
        },
        {
          "type": "text",
          "value": " manga artist and musician. He has been ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "drawing",
            },
          ],
          "type": "emphasis",
        },
        {
          "type": "text",
          "value": " manga since he  ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "was",
            },
          ],
          "type": "strong",
        },
        {
          "type": "text",
          "value": " four years old, and for most of his career has created two series simultaneously. ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "So there",
            },
          ],
          "type": "strong",
        },
        {
          "type": "text",
          "value": " ",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`issues > issue44 2`] = `
"Naoki Urasawa is a **Japanese** manga artist and musician. He has been *drawing* manga since he  **was** four years old, and for most of his career has created two series simultaneously. **So there**&#x20;
"
`;

exports[`issues > issue44 3`] = `
[
  {
    "children": [
      {
        "text": "Naoki Urasawa is a ",
      },
      {
        "strong": true,
        "text": "Japanese",
      },
      {
        "text": " manga artist and musician. He has been ",
      },
      {
        "emphasis": true,
        "text": "drawing",
      },
      {
        "text": " manga since he  ",
      },
      {
        "strong": true,
        "text": "was",
      },
      {
        "text": " four years old, and for most of his career has created two series simultaneously. ",
      },
      {
        "strong": true,
        "text": "So there",
      },
      {
        "text": " ",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`issues > issue90 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "Italic",
                },
              ],
              "type": "strong",
            },
          ],
          "type": "emphasis",
        },
        {
          "type": "text",
          "value": " ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "in a bold paragraph",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "This is an ",
            },
            {
              "children": [
                {
                  "type": "text",
                  "value": "Italic",
                },
              ],
              "type": "emphasis",
            },
          ],
          "type": "strong",
        },
        {
          "type": "text",
          "value": " ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "in a bold paragraph",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`issues > issue90 2`] = `
"***Italic*** **in a bold paragraph**

**This is an *Italic*** **in a bold paragraph**
"
`;

exports[`issues > issue90 3`] = `
[
  {
    "children": [
      {
        "emphasis": true,
        "strong": true,
        "text": "Italic",
      },
      {
        "text": " ",
      },
      {
        "strong": true,
        "text": "in a bold paragraph",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "strong": true,
        "text": "This is an ",
      },
      {
        "emphasis": true,
        "strong": true,
        "text": "Italic",
      },
      {
        "text": " ",
      },
      {
        "strong": true,
        "text": "in a bold paragraph",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`issues > issue129 1`] = `[]`;

exports[`issues > issue129 2`] = `[]`;

exports[`issues > issue145 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "inline code",
            },
          ],
          "type": "strong",
        },
      ],
      "type": "emphasis",
    },
  ],
  "type": "root",
}
`;

exports[`issues > issue145 2`] = `
"_**inline code**_
"
`;

exports[`issues > issue145-2 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "type": "inlineCode",
              "value": "code",
            },
          ],
          "type": "emphasis",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`issues > issue145-2 2`] = `
"_\`code\`_
"
`;

exports[`options > override builders 1`] = `
[
  {
    "children": [
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "bar": "AAAA",
                "type": "bar",
              },
            ],
            "type": "paragraph",
          },
          {
            "children": [
              {
                "checked": null,
                "children": [
                  {
                    "children": [
                      {
                        "bar": "BBBB",
                        "type": "bar",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "spread": false,
                "type": "listItem",
              },
            ],
            "type": "foo",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
      {
        "checked": null,
        "children": [
          {
            "children": [
              {
                "bar": "CCCC",
                "type": "bar",
              },
            ],
            "type": "paragraph",
          },
        ],
        "spread": false,
        "type": "listItem",
      },
    ],
    "type": "foo",
  },
]
`;

exports[`options > override builders 2`] = `
{
  "children": [
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "AAAA",
                },
              ],
              "type": "paragraph",
            },
            {
              "children": [
                {
                  "checked": null,
                  "children": [
                    {
                      "children": [
                        {
                          "type": "text",
                          "value": "BBBB",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "spread": false,
                  "type": "listItem",
                },
              ],
              "type": "list",
            },
          ],
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "CCCC",
                },
              ],
              "type": "paragraph",
            },
          ],
          "spread": false,
          "type": "listItem",
        },
      ],
      "type": "list",
    },
  ],
  "type": "root",
}
`;

exports[`options > override builders 3`] = `
"- AAAA
  - BBBB

- CCCC
"
`;
